err/avidaspatial.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/avidaspatial'...
Compiling './lib/python3.5/site-packages/avidaspatial/cell_picker.py'...
***   File "./lib/python3.5/site-packages/avidaspatial/cell_picker.py", line 125
    print len(self.cells), "cells selected"
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avidaspatial/landscape_stats.py'...
***   File "./lib/python3.5/site-packages/avidaspatial/landscape_stats.py", line 61
    print "Unrecognized mode for make_niche_dictionary"
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/avidaspatial/parse_files.py'...
***   File "./lib/python3.5/site-packages/avidaspatial/parse_files.py", line 61
    print "Unsupported data_type passed to load_grid"
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/avidaspatial/utils.py'...
***   File "./lib/python3.5/site-packages/avidaspatial/utils.py", line 165
    print "Warning: world phenotypes don't correspond to phenotypes"
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/avidaspatial-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
